[gd_scene load_steps=2 format=3 uid="uid://bvqr6xk4t1oqc"]

[ext_resource type="Script" path="res://Scripts/UI/SlotSelectionMenu.gd" id="1_7c4jk"]
[ext_resource type="Theme" uid="uid://ccpr45sj16cli" path="res://Assets/FactoryTheme.tres" id="2_theme"]

[node name="SlotSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_7c4jk")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Save Game"
horizontal_alignment = 1

[node name="InputContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
visible = false
theme_override_constants/separation = 8

[node name="InputLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2
text = "Save Name:"

[node name="TextInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 40)
placeholder_text = "Enter save name"

[node name="SaveNameButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 40)
theme_override_font_sizes/font_size = 18
text = "Save"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
theme_override_font_sizes/font_size = 24
text = "Back"
